# pj-logging

./: README.md  pyproject.toml  requirements.in
.github/workflows/: publish.yml
python/pj_logging/: __init__.py  __main__.py  logger.py  pj_logging.py
tests/: __init__.py  test_init.py
