[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pj_logging"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

authors = [
    {name = "placeholder", email = "placeholder@abc.com"},
]

[project.license]
file = "LICENSE"

[project.urls]

[project.scripts]
pj_logging = "pj_logging:__main__.main"

[project.gui-scripts]

[project.optional-dependencies]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-ruff",
    "pytest-pyright",
]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-ruff",
    "pytest-pyright",
    "ipython",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.lock"]

[tool.setuptools.package-data]
pj_logging = ["py.typed"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=no --cov --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
exclude = ["__pycache__", ".git", ".venv"]

[tool.pyright]
venvPath = "."
venv = ".venv"
enableReachabilityAnalysis = false
include = ["python", "tests"]
exclude = ["__pycache__", ".git", ".venv"]

[tool.ruff]
exclude = ["__pycache__", ".git", ".venv"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "ERA001",
] # (D203) mutually exclusive with (D211) - (D212) mutually exclusive with (D213)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
] # (S101) Use of `assert`

[tool.ruff.lint.isort]
known-first-party = ["pj_logging"]
lines-after-imports = 2

[tool.culting]

